# EVMPages

./: .gitignore  README.md
contracts/: EVMPages.sol
evmpages/: .gitignore  foundry.toml
evmpages/lib/forge-std/: package.json
evmpages/lib/forge-std/src/: StdAssertions.sol  StdCheats.sol  Test.sol  Vm.sol
evmpages/lib/forge-std/test/: StdAssertions.t.sol  StdCheats.t.sol
evmpages/script/: EVMPages.s.sol
evmpages/src/: EVMPages.sol
interactor/: Cargo.toml  EVMPages.json  abi.json  config.toml
interactor/src/: helpers.rs  main.rs  selector.rs
template/: blog.html  index.html  jeremy-ascii.html  testpage.html
