[package]
name = "interactor"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"

[dependencies]
ethers = "1.0.2"
ethers-solc = "1.0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.89"
serde = "1.0.149"
inquire = "0.5.3"
dotenvy = "0.15.0"
minify-html = "0.10.8"
toml = "0.7.2"
anyhow = "1.0.69"
osstrtools = "0.2.2"
